Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

* bug 137; symlink on directory merging failures where pkgcore would wipe
  files it had just installed invalidly.

* correct issue in offset rewriting (was resetting new_offset to '/')-
  should only be api visible, no existing consumers known.

* ebuild env lzma unpack support was broken; fixed (ticket 140).

* Additional debug output for pmerge.

* Further extending PortageFormatter to sanely handle worldfile highlights
  and show repos with both id and location

* Ticket 132: Portage Formatter supports real portage colors now,
  thanks to agaffney for getting the ball rolling

* Masked IUSEs were not treated right in all cases, thanks to agaffney
  for report and help testing

* (0.3.3 Add: diefunc tracebacks beautified)


pkgcore 0.3.4:

* IUSEs were filtered, unstated were not respected though breaks with
  current portage tree, so re-enabling.
  Also sanely handle -flag enforcing now and kill hackish code for it.


pkgcore 0.3.3:

* IUSE defaults are respected now, so EAPI=1 implemented

* Write slotted atoms to worldfile as portage supports this now

* Sync up with portage; add support for lzma to unpack- mirror r7991 from
  portage.


pkgcore 0.3.2:

* ticket 190746 from gentoo; basically need to force the perms of first level
  directory of an unpacked $DISTDIR to ensure it's at least readable/writable.
  fixes unpacking of app-misc/screen-4.0.3_p20070403::gentoo-x86 .

* ticket 118; if -u, don't add the node to world set.

* correct a corner case in python implementation of cpv comparison (just
  python, cpy extension handles it correctly); bug 188449 in gentoo, basically
  floats have a limited precision, thus it was possible to get truncation in
  comparison with specially crafted versions.

* handle EOF/IOError on raw_input (for --ask) a bit more gracefully, ticket
  108.
